2_RessourcesIstio/2.1_Gateway/coolstore-gw-tls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: coolstore-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "webapp.formation.io"
  - port:
      number: 443
      name: https
      protocol: HTTPS         # Autorise l'accès TLS
    tls:
      mode: SIMPLE
      credentialName: webapp-credential   # Le nom du secret contenant le certificat
    hosts:
    - "webapp.formation.io"
